<?xml version="1.0"?>
<package format="3">
  <name>kuka_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for KUKA manipulators within ROS-Industrial.</description>
  <author>Shaun Edwards</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kuka_kr5_support</exec_depend>
  <exec_depend>kuka_kr6_support</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <!--<exec_depend>kuka_rsi_hw_interface</exec_depend>-->
  <exec_depend>kuka_rsi_simulator</exec_depend>

  <export>
	<build_type>ament_cmake</build_type>
  </export>
</package>
